--- a/2025/src/dec_2/CMakeLists.txt
+++ b/2025/src/dec_2/CMakeLists.txt
@@ -1,3 +1,9 @@
 add_executable(dec_2 main.cpp)
-target_link_libraries(dec_2 PRIVATE utils)
-# target_link_libraries(dec_2_logic PRIVATE utils)
+
+add_library(dec_2_logic INTERFACE)
+
+target_include_directories(dec_2_logic
+                           INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/logic)
+
+target_link_libraries(dec_2 PRIVATE dec_2_logic utils)
+target_link_libraries(dec_2_logic INTERFACE utils)
